# human-readable-ids

./: .gitignore  README.md  pyproject.toml
human_readable_ids/: __init__.py  adjectives.py  nouns.py  random_word.py
tests/: test_random_adjective_noun.py
